ansible/dns/ingress/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "loki.yekvitka.local"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - loki.yekvitka.local
    secretName: loki-tls
  rules:
  - host: loki.yekvitka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki
            port:
              number: 3100
