ansible/dns/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "prometheus.yekvitka.local"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.yekvitka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-kube-prome-prometheus
            port:
              number: 9090
