ansible/dns/ingress/tempo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "tempo.yekvitka.local"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tempo.yekvitka.local
    secretName: tempo-tls
  rules:
  - host: tempo.yekvitka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo
            port:
              number: 3100
