ansible/dns/ingress/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "traefik.yekvitka.local"
spec:
  ingressClassName: nginx
  rules:
  - host: traefik.yekvitka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 80
